# avidlib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: continuous-integration.yml  tests.yml
cmake/: win32_export.cmake
core/: CMakeLists.txt
core/clib/: CMakeLists.txt
core/clib/include/AVIDLib_CLib/: Bool.h  Check.h  Debug.h  Int.h  Ptr.h  Util.h
core/core/: CMakeLists.txt
core/core/include/AVIDLib_Core/: Test.h
core/core/src/: Test.c
core/include/AVIDLib_Core/: main.h
core/qmath/: CMakeLists.txt
core/qmath/include/AVIDLib_QMath/: Math.h  Test.h  Vec3.h
core/qmath/src/: Math.c  Test.c  Vec3.c
core/src/: main.c
docs/: Project.txt  makedocs.sh
layers/: CMakeLists.txt
layers/containers/: CMakeLists.txt  unit_abmdlv10.cmake  unit_mdlv10.cmake
layers/containers/include/AVIDLib_Containers/: UnitSupport.h
layers/containers/include/AVIDLib_Containers/ABMDLv10/: ContainerDefinitions.h  Model.h
layers/containers/include/AVIDLib_Containers/MDLv10/: BodyPart.h  Bone.h  BoneController.h  BoneWeight.h  BoneWeightedVec3.h  ContainerDefinitions.h  Definitions.h  MDLFile.h  Model.h  ModelFile.h  Submodel.h
layers/containers/src/: UnitSupport.c
layers/containers/src/ABMDLv10/: Model.c
layers/containers/src/MDLv10/: BodyPart.c  Bone.c  BoneController.c  BoneWeight.c  BoneWeightedVec3.c  MDLFile.c  Model.c  ModelFile.c  Submodel.c
layers/containers/src/MDLv10/Helpers/: BodyPart_Helpers.c  BodyPart_Helpers.h  BoneController_Helpers.c  BoneController_Helpers.h  BoneWeightedVec3_Helpers.c  BoneWeightedVec3_Helpers.h  Bone_Helpers.c  Bone_Helpers.h  Submodel_Helpers.c  Submodel_Helpers.h
layers/containers/src/MDLv10/Internal/: BodyPart_Internal.c  BodyPart_Internal.h  BoneController_Internal.c  BoneController_Internal.h  BoneWeightedVec3_Internal.c  BoneWeightedVec3_Internal.h  Bone_Internal.c  Bone_Internal.h  Submodel_Internal.c  Submodel_Internal.h
layers/core/: CMakeLists.txt
layers/core/core/include/AVIDLib_Core/: Bool.h  Check.h  Debug.h  Int.h  Ptr.h  Util.h
layers/core/plat/: CMakeLists.txt
layers/core/plat/include/AVIDLib_Plat/: Bool.h  Check.h  Debug.h  Float.h  Int.h  Memory.h  Ptr.h  String.h  Util.h  VariadicArgs.h
layers/core/qmath/: CMakeLists.txt  LICENSE
layers/core/qmath/include/AVIDLib_QMath/: BBox.h  Constants.h  Conversions.h  EulerAngle.h  Mat3x4.h  Mat4x4.h  Math.h  Quat.h  Types.h  Vec3.h  Vec4.h
layers/core/qmath/src/: Conversions.c  EulerAngle.c  Mat3x4.c  Mat4x4.c  Math.c  Quat.c  Vec3.c  Vec4.c
layers/core/util/: CMakeLists.txt
layers/core/util/include/AVIDLib_Internal_Util/: Check.h  Debug.h  ItemInitialisation.h  Memory.h  StringBuilder.h  Util.h
layers/core/util/src/: Check.c  ItemInitialisation.c  StringBuilder.c
layers/io/: CMakeLists.txt  unit_mdlv10.cmake
layers/io/include/AVIDLib_IO/: GenericOperations.h  ParseErrors.h  ReadContext.h  ReadResult.h  ReaderErrors.h  UnitSupport.h
layers/io/include/AVIDLib_IO/MDLv10/: Reader.h
layers/io/include/AVIDLib_IO/MDLv10/Reader/: Reader.h
layers/io/src/: GenericOperations.c  GenericUnitInterface.h  ParseErrors.c  ReadContext.c  ReadResult.c  ReaderErrors.c  UnitSupport.c  UnitSupportDefs.h  Validation.c  Validation.h
layers/io/src/FormatCommon/: FileElementHelpers.h
layers/io/src/MDLv10/: BodyPart.c  BodyPart.h  Bone.c  Bone.h  BoneController.c  BoneController.h  Definitions.h  FileElements.h  GenericUnitInterface_MDLv10.c  GenericUnitInterface_MDLv10.h  Header.h  IODefinitions.h  Reader.c  ValidationHelpers.h
layers/io/src/MDLv10/Reader/: Reader.c
layers/tools/: CMakeLists.txt
layers/tools/common/: CMakeLists.txt
layers/tools/common/include/AVIDLib_ToolsCommon/: ApplicationCallbacks.h  ApplicationLauncher.h  BaseApplication.h  DPI.h  IApplicationCallbacks.h  SimpleApplication.h  WinSysHelpers.h
layers/tools/common/src/: ApplicationCallbacks.cpp  ApplicationLauncher.cpp  BaseApplication.cpp  DPI_Linux.cpp  DPI_Windows.cpp  SimpleApplication.cpp
layers/tools/common/src/x11/: WinSysHelpers_X11.cpp
layers/tools/mdlviewer/: CMakeLists.txt
layers/tools/mdlviewer/src/: InfoDisplay.cpp  InfoDisplay.h  MDLLoader.cpp  MDLLoader.h  MDLRenderer.cpp  MDLRenderer.h  Main.cpp  MainMenuBar.cpp  MainMenuBar.h  OpenMDLFileDialogue.cpp  OpenMDLFileDialogue.h  TestFramebufferRenderer.cpp  TestFramebufferRenderer.h  main.cpp
layers/tools/mdlviewer/src/Sokol/: SokolGFX.cpp  SokolGFXImGUI.cpp  SokolGFXImGUI.h  SokolHeaders.h  SokolImGUI.cpp
layers/tools/mdlviewer/src/sokol/: sokolApp.cpp  sokolGFXImGUI.cpp  sokolGlue.cpp
tests/: CMakeLists.txt
tests/frameworks/: CMakeLists.txt
tests/frameworks/catch2/: CMakeLists.txt
tests/frameworks/rapidcheck/: CMakeLists.txt
tests/placeholder/: CMakeLists.txt  main.cpp
tests/propertyTests/: CMakeLists.txt  Main.cpp
tests/unitTests/: CMakeLists.txt  Mat4x4.cpp  Placeholder.cpp
