set(TARGETNAME_CORE AVIDLib_Core)

set(PUBLIC_HEADERS_GENERAL
	include/${TARGETNAME_CORE}/main.h
)

set(PUBLIC_HEADERS_ALL
	${PUBLIC_HEADERS_GENERAL}
)

set(SOURCES_ALL
	src/main.c
)

if(BUILD_SHARED_LIBS)
	add_library(${TARGETNAME_CORE} SHARED ${PUBLIC_HEADERS_ALL} ${SOURCES_ALL})
else()
	add_library(${TARGETNAME_CORE} STATIC ${PUBLIC_HEADERS_ALL} ${SOURCES_ALL})
endif()

target_include_directories(${TARGETNAME_CORE} PUBLIC
	include
)

target_include_directories(${TARGETNAME_CORE} PRIVATE
	src
)

install(TARGETS ${TARGETNAME_CORE}
	ARCHIVE DESTINATION ${TARGETNAME_CORE}/lib
	LIBRARY DESTINATION ${TARGETNAME_CORE}/lib
	RUNTIME DESTINATION ${TARGETNAME_CORE}/bin
)

install(FILES ${PUBLIC_HEADERS_GENERAL} DESTINATION ${TARGETNAME_CORE}/include/${TARGETNAME_CORE})
