include(win32_export)
create_export_header(${TARGETNAME_CORE})

set(PUBLIC_HEADERS_GENERAL
	include/${TARGETNAME_CORE}/LibExport.h
	include/${TARGETNAME_CORE}/Test.h
)

set(PUBLIC_HEADERS_ALL
	${PUBLIC_HEADERS_GENERAL}
)

set(SOURCES_ALL
	src/Test.c
)

if(BUILD_SHARED_LIBS)
	add_library(${TARGETNAME_CORE} SHARED ${PUBLIC_HEADERS_ALL} ${SOURCES_ALL})
else()
	add_library(${TARGETNAME_CORE} STATIC ${PUBLIC_HEADERS_ALL} ${SOURCES_ALL})
endif()

target_link_libraries(${TARGETNAME_CORE} PUBLIC ${TARGETNAME_QMATH})

target_include_directories(${TARGETNAME_CORE} PUBLIC
	include
)

target_include_directories(${TARGETNAME_CORE} PRIVATE
	src
)

install(TARGETS ${TARGETNAME_CORE}
	ARCHIVE DESTINATION ${TARGETNAME_CORE}/lib
	LIBRARY DESTINATION ${TARGETNAME_CORE}/lib
	RUNTIME DESTINATION ${TARGETNAME_CORE}/bin
)

install(FILES ${PUBLIC_HEADERS_GENERAL} DESTINATION ${TARGETNAME_CORE}/include/${TARGETNAME_CORE})
