set(TARGETNAME_PLACEHOLDER placeholder_test)
add_executable(${TARGETNAME_PLACEHOLDER} main.cpp)
target_include_directories(${TARGETNAME_PLACEHOLDER} PRIVATE .)
target_link_libraries(${TARGETNAME_PLACEHOLDER} rapidcheck)

install(TARGETS ${TARGETNAME_PLACEHOLDER}
	ARCHIVE DESTINATION ${TARGETNAME_PLACEHOLDER}
	LIBRARY DESTINATION ${TARGETNAME_PLACEHOLDER}
	RUNTIME DESTINATION ${TARGETNAME_PLACEHOLDER}
)
