set(TARGETNAME_PROPERTY_TESTS PropertyTests)

add_executable(${TARGETNAME_PROPERTY_TESTS}
	Main.cpp
)

target_include_directories(${TARGETNAME_PROPERTY_TESTS} PRIVATE .)
target_link_libraries(${TARGETNAME_PROPERTY_TESTS} rapidcheck)

install(TARGETS ${TARGETNAME_PROPERTY_TESTS}
	ARCHIVE DESTINATION tests/${TARGETNAME_PROPERTY_TESTS}
	LIBRARY DESTINATION tests/${TARGETNAME_PROPERTY_TESTS}
	RUNTIME DESTINATION tests/${TARGETNAME_PROPERTY_TESTS}
)
