set(TARGETNAME_UNIT_TESTS UnitTests)

add_executable(${TARGETNAME_UNIT_TESTS}
	Main.cpp
	Placeholder.cpp
)

target_include_directories(${TARGETNAME_UNIT_TESTS} PRIVATE .)
target_link_libraries(${TARGETNAME_UNIT_TESTS} Catch2)

install(TARGETS ${TARGETNAME_UNIT_TESTS}
	ARCHIVE DESTINATION tests/${TARGETNAME_UNIT_TESTS}
	LIBRARY DESTINATION tests/${TARGETNAME_UNIT_TESTS}
	RUNTIME DESTINATION tests/${TARGETNAME_UNIT_TESTS}
)
