set(PUBLIC_HEADERS_GENERAL
	include/${TARGETNAME_PLAT}/Bool.h
	include/${TARGETNAME_PLAT}/Int.h
	include/${TARGETNAME_PLAT}/Ptr.h
)

add_library(${TARGETNAME_PLAT} INTERFACE)

target_include_directories(${TARGETNAME_PLAT} INTERFACE
	include
)

install(FILES ${PUBLIC_HEADERS_GENERAL} DESTINATION ${TARGETNAME_PLAT}/include/${TARGETNAME_PLAT})
