set(TARGETNAME_MDLVIEWER MDLViewer)
set(TOOLS_MDLVIEWER "NO" CACHE BOOL "If set, builds the MDLViewer tool.")

set(SOURCES
	src/main.cpp
)

set(FONTS
	${RESOURCES_DIR}/fonts/UbuntuMono/UbuntuMono-R.ttf
)

if(TOOLS_ALL OR TOOLS_MDLVIEWER)
	if(BUILD_TOOLS)
		add_executable(${TARGETNAME_MDLVIEWER} ${SOURCES})
		target_include_directories(${TARGETNAME_MDLVIEWER} PRIVATE src)
		target_link_libraries(${TARGETNAME_MDLVIEWER} PRIVATE ${TARGETNAME_THIRDPARTY_IMGUI})
		target_link_libraries(${TARGETNAME_MDLVIEWER} PRIVATE glfw)
		target_link_libraries(${TARGETNAME_MDLVIEWER} PRIVATE ${TARGETNAME_THIRDPARTY_GL3W})
		target_link_libraries(${TARGETNAME_MDLVIEWER} PRIVATE bgfx)

		install(TARGETS ${TARGETNAME_MDLVIEWER}
			ARCHIVE DESTINATION ${TARGETNAME_MDLVIEWER}
			LIBRARY DESTINATION ${TARGETNAME_MDLVIEWER}
			RUNTIME DESTINATION ${TARGETNAME_MDLVIEWER}
		)

		install(FILES ${FONTS} DESTINATION ${TARGETNAME_MDLVIEWER}/resources/fonts)
	else()
		message(WARNING "Not building MDL Viewer as BUILD_TOOLS was not set.")
	endif()
endif()
